--- a/Club/home/templates/home/update_training.html
+++ b/Club/home/templates/home/update_training.html
@@ -26,25 +26,27 @@
             <p id="is_standard">{{ training_form.is_standard }}</p>
         </div>
         <div class="fieldWrapper hideMe" style="display:none;">
-                {{ training_form.date.errors }}
-                <label for="{{ form.message.id_for_label }}">Date:</label>
-                <p>{{ training_form.date }}</p>
-            </div>
-        <div class="fieldWrapper hideMe" style="display:none;">
-            {{ training_form.start_time.errors }}
-            <label for="{{ form.message.id_for_label }}">Start Time:</label>
-            <p>{{ training_form.start_time }}</p>
-        </div>
-        <div class="fieldWrapper hideMe"  style="display:none;">
-            {{ training_form.end_time.errors }}
-            <label for="{{ form.message.id_for_label }}">End Time:</label>
-            <p>{{ training_form.end_time }}</p>
-        </div>
-        <div class="fieldWrapper hideMe" style="display:none;">
             {{ training_form.location.errors }}
             <label for="{{ form.message.id_for_label }}">Location:</label>
             <p>{{ training_form.location }}</p>
         </div>
+        <hr class="hideMe" style="display:none">
+        <div class="fieldWrapper hideMe third" style="display:none;">
+                {{ training_form.date.errors }}
+                <label for="{{ form.message.id_for_label }}">Date:</label>
+                <p>{{ training_form.date }}</p>
+            </div>
+        <div class="fieldWrapper hideMe third" style="display:none;">
+            {{ training_form.start_time.errors }}
+            <label for="{{ form.message.id_for_label }}">Start Time:</label>
+            <p>{{ training_form.start_time }}</p>
+        </div>
+        <div class="fieldWrapper hideMe third"  style="display:none;">
+            {{ training_form.end_time.errors }}
+            <label for="{{ form.message.id_for_label }}">End Time:</label>
+            <p>{{ training_form.end_time }}</p>
+        </div>
+        <hr class="hideMe" style="display:none">
         <div class="fieldWrapper hideMe half" style="display:none;">
             {{ training_form.trainers.errors }}
             <label for="{{ form.message.id_for_label }}">Trainers:</label>
@@ -55,6 +57,7 @@
             <label for="{{ form.message.id_for_label }}">Riders:</label>
             <p>{{ training_form.riders }}</p>
         </div>
+        <hr class="hideMe" style="display:none">
         <div class="fieldWrapper">
             {{ training_form.warm_up.errors }}
             <label for="{{ form.message.id_for_label }}">Warm Up:</label>
