--- a/Club/home/static/home/css/stylesheet.css
+++ b/Club/home/static/home/css/stylesheet.css
@@ -1,5 +1,5 @@
 body{
-  background-color: #DAF1E4 ; /*grey  ; */
+  background-color: #f5f5f5; /* #DAF1E4 ; /*grey  ; */
   /*  #8CDD81; */
   /* background-color:rgb(102,204,146); */
   /* background-color: rgb(46,139,87); */
