--- a/Club/home/templates/home/update_training.html
+++ b/Club/home/templates/home/update_training.html
@@ -10,6 +10,16 @@
 
 {% block content %}
 <div class="container">
+
+    <!-- print django messages framework -->
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+
     <form method="post">
         {% csrf_token %}
         <!-- {{ training_form.as_p }} -->
